# wb-monitor-bot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: __main__.py  callbacks.py  enums.py  pyproject.toml  settings.py  text.py  wb_similar_parser.py
bot/cli/: __init__.py  wb_similar.py
bot/db/: __init__.py  base.py  func.py  models.py  redis.py
bot/handlers/: __init__.py  _dashboard.py  _shared.py  admin.py  compare.py  find_cheaper.py  payment.py  quick_item.py  settings.py  support.py  tracks.py  wb_monitor.py
bot/handlers/cmds/: start.py
bot/keyboards/: factories.py  inline.py
bot/middlewares/: __init__.py  throw_session.py  throw_user.py
bot/services/: cheap_ai.py  config.py  product_compare.py  repository.py  review_analysis.py  similar_filter.py  utils.py  wb_browser_similar.py  wb_client.py  wb_similar_selenium.py  worker.py
migrations/: alembic.ini  env.py  pyproject.toml
migrations/versions/: 20260218_000001_wb_monitor.py  20260218_000002_wb_monitor_pro.py  20260219_000002_wb_referrals.py  20260219_000003_wb_referral_codes_rewards.py  20260225_000004_wb_track_qty_soft_delete.py  20260225_000005_wb_rating_reviews.py  20260225_000006_wb_runtime_config.py  20260226_000007_wb_daily_ai_limits.py  20260226_000008_wb_llm_runtime_config.py  20260226_000009_wb_promo_links.py  20260301_000001_add_support_tickets.py  20260301_000002_add_support_ticket_photos.py  20260303_000001_add_watch_price_fluctuation.py  20260306_000001_add_user_names.py  20260306_000002_add_compare_runs.py  20260307_000003_add_feature_usage_table.py  (+2 more)
